--- a/jeaf-generator-test-activities-api/pom.xml
+++ b/jeaf-generator-test-activities-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.32</version>
+		<version>1.6.33-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Activities API</name>
