--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -175,14 +175,6 @@ paths:
           schema:
             type: string
             example: 'en'
-        - name: reseller
-          in: cookie
-          description: >-
-            TODO Please add comment
-          required: true
-          schema:
-            type: integer
-            format: int64
         - name: id
           in: path
           description: >-
@@ -198,6 +190,14 @@ paths:
           required: true
           schema:
             type: string
+        - name: reseller
+          in: cookie
+          description: >-
+            TODO Please add comment
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
           description: >-
@@ -297,6 +297,13 @@ paths:
           schema:
             type: string
             example: 'en'
+        - name: q1
+          in: query
+          description: >-
+            TODO Please add comment
+          required: true
+          schema:
+            type: string
         - name: reseller
           in: cookie
           description: >-
@@ -305,13 +312,6 @@ paths:
           schema:
             type: integer
             format: int64
-        - name: q1
-          in: query
-          description: >-
-            TODO Please add comment
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: >-
@@ -468,13 +468,6 @@ paths:
     patch:
       operationId: loadSpecificThings
       parameters:
-        - name: specificHeader
-          in: header
-          description: >-
-            TODO Please add comment
-          required: true
-          schema:
-            type: string
         - name: token
           in: header
           description: >-
@@ -490,14 +483,6 @@ paths:
           schema:
             type: string
             example: 'en'
-        - name: reseller
-          in: cookie
-          description: >-
-            TODO Please add comment
-          required: true
-          schema:
-            type: integer
-            format: int64
         - name: id
           in: path
           description: >-
@@ -508,6 +493,21 @@ paths:
             format: int64
         - name: q1
           in: query
+          description: >-
+            TODO Please add comment
+          required: true
+          schema:
+            type: string
+        - name: reseller
+          in: cookie
+          description: >-
+            TODO Please add comment
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: specificHeader
+          in: header
           description: >-
             TODO Please add comment
           required: true
@@ -675,6 +675,76 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
         'default':
           $ref: '#/components/responses/CustomErrorResponse'
+  /products//LocalBeanParam:
+    get:
+      operationId: testLocalBeanParamType
+      parameters:
+        - $ref: '#/components/parameters/localID'
+        - $ref: '#/components/parameters/localKey'
+      responses:
+        '200':
+          description: >-
+            TODO Please add comment
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+  /products//ExternalBeanParam:
+    get:
+      operationId: testExternalBeanParameterType
+      parameters:
+        - $ref: '../base/product-base.yml#/components/parameters/novaKey'
+        - $ref: '../base/product-base.yml#/components/parameters/tkID'
+      responses:
+        '200':
+          description: >-
+            TODO Please add comment
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+  /products//ChildBeanParam:
+    get:
+      operationId: testChildBeanParameter
+      parameters:
+        - $ref: '#/components/parameters/childProperty'
+        - $ref: '../base/product-base.yml#/components/parameters/novaKey'
+        - $ref: '../base/product-base.yml#/components/parameters/tkID'
+      responses:
+        '200':
+          description: >-
+            TODO Please add comment
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
 
 
 security:
@@ -702,7 +772,31 @@ components:
             read:pets: Read pets data
             write:pets: Modify pets
             
-
+  parameters:
+    # com.anaptecs.jeaf.junit.openapi.service1.ChildBeanParameterType.childProperty
+    childProperty:
+      name: X-Child-Property
+      in: header
+      required: true
+      schema:
+        type: string
+      
+    # com.anaptecs.jeaf.junit.openapi.service1.LocalBeanParamType.localID
+    localID:
+      name: localID
+      in: header
+      required: true
+      schema:
+        type: string
+      
+    # com.anaptecs.jeaf.junit.openapi.service1.LocalBeanParamType.localKey
+    localKey:
+      name: localKey
+      in: header
+      required: true
+      schema:
+        type: string
+      
   responses:
     # com.anaptecs.jeaf.junit.openapi.service1.CustomErrorResponse
     CustomErrorResponse:
@@ -711,7 +805,6 @@ components:
         text/plain:
           schema:
             $ref: '../base/product-base.yml#/components/schemas/Problem'
-
 
   schemas:
     # com.anaptecs.jeaf.junit.openapi.service1.Sale
