--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<jeaf.workload.api.version>1.6.14</jeaf.workload.api.version>
 		<jeaf.json.api.version>1.6.7</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.8</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.29-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.29</jeaf.test.model.version>
 		
 		<jackson.version>2.13.1</jackson.version>
 	</properties>
