Extended test for inheritance in OpenAPI

--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -33,6 +33,50 @@
 		    <artifactId>jackson-annotations</artifactId>
 		    <version>${jackson.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.json</groupId>
+			<artifactId>jeaf-json-api</artifactId>
+		    <version>${jeaf.json.api.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>${javaee-api.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.x-fun</groupId>
+			<artifactId>jeaf-x-fun-default-runtime</artifactId>
+			<version>${jeaf.x-fun.impl.version}</version>
+			<type>pom</type>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.json</groupId>
+			<artifactId>jeaf-json-impl-runtime</artifactId>
+		    <version>${jeaf.json.impl.version}</version>
+		    <type>pom</type>
+		    <scope>test</scope>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.json</groupId>
+			<artifactId>jeaf-json-impl</artifactId>
+		    <version>${jeaf.json.impl.version}</version>
+		    <scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -41,6 +85,8 @@
 				<groupId>com.anaptecs.jeaf.generator</groupId>
 				<artifactId>jeaf-generator-maven-plugin</artifactId>
 				<version>${project.version}</version>
+				<!--  
+				-->
 				<executions>
 					<execution>
 						<goals>
